tests/compile-fail/invalid_serializer.stderr
error: unexpected end of input
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(); // unexpected end of input
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "bad string"
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!("bad string", OffsetDateTime, "[year] [month]"); // module name is not ident
  |                            ^^^^^^^^^^^^

error: unexpected token: :
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format: OffsetDateTime, "[year] [month]"); // not a comma
  |                                     ^

error: unexpected end of input
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format,); // missing formattable and string
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, "[year] [month]"); // missing formattable
  |                                       ^^^^^^^^^^^^^^^^

error: unexpected token: "[year] [month]"
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(OffsetDateTime, "[year] [month]"); // missing ident
  |                                            ^^^^^^^^^^^^^^^^

error: unexpected end of input
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, OffsetDateTime); // missing string format
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, OffsetDateTime,); // missing string format
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, OffsetDateTime "[year] [month]"); // missing comma
  |                                                      ^^^^^^^^^^^^^^^^

error: unexpected token: :
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, OffsetDateTime : "[year] [month]"); // not a comma
  |                                                      ^

error: invalid component
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, OffsetDateTime, "[bad]"); // bad component name
  |                                                       ^^^^^^^

error[E0425]: cannot find value `not_string` in this scope
 --> $WORKSPACE/tests/compile-fail/invalid_serializer.rs
  |
  | serde::format_description!(my_format, OffsetDateTime, not_string); // not in scope
  |                                                       ^^^^^^^^^^ not found in this scope
